samples/_failures_safe/1761645659_2b32e4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_807b439f.c:163: error: expected ‘;’, ‘,’ or ‘)’ at end of input
